syntax= "proto3";
package greet;
option java_multiple_files = true;
option java_package = "org.example.grpc";

service GreetService{
  rpc greet(GreetRequest) returns (GreetResponse) {};
  rpc greetServerStream(GreetServerStreamRequest) returns (stream GreetServerStreamResponse){};
}
message Greeting{
  string firstName = 1;
  string lastName = 2;
}
message GreetRequest{
   Greeting greeting =1;
}
message GreetServerStreamRequest{
  Greeting greeting =1;
}
message  GreetResponse{
   string  result =1;
}
message GreetServerStreamResponse{
  string  result =1;
}
